--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,51 @@
-/*  your css code here. If applicable */
+.container {
+    border: 1px solid black;
+    padding: 10px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+}
+
+/* Remember section */
+.remember {
+    border: none;
+    display: flex;
+    padding: 0;
+    text-align: center;
+}
+
+/* Heading */
+#heading {
+    text-align: center;
+}
+
+/* Buttons container */
+#btns {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+/* Button styling */
+button {
+    /* max-width: 200px; */
+    padding: 8px 15px;
+	border-radius : 5px;
+	border : none;
+	background-color : gray;
+	color : white;
+}
+
+input {
+	border-radius : 3px;
+	border : 1px solid gray;
+	padding : 8px;
+}
+
+#existing {
+	display : none;
+}
+
+
+
